--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
  <!--footer-->
  <div class="footer">
     <h2>Questions? Call 000-800-919-1694</h2>
-    <div class="row">
+    <div class="links">
         <div class="col">
             <a href="#">FAQ</a>
             <a href="#">Investor Relation</a>
